<resources>
    <string name="app_name">O-Starter</string>
    <string name="competition_name">Competition Name</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="default_date">25.04.2021</string>
    <string name="time">Time</string>
    <string name="default_SI">0000000</string>
    <string name="default_name">Name Surname</string>
    <string name="default_statNumber">435</string>
    <string name="dok9800">DOK9800</string>
    <string name="settings">Settings</string>
    <string name="share_changes">Share Changes</string>
    <string name="show_changes">Show Changes</string>
    <string name="share_race">Share Race</string>
    <string name="new_activity">New Activity</string>
    <string name="about_app">About App</string>
    <string name="send_data_on_server">Send data on Server</string>
    <string name="web_server">Web Server</string>
    <string name="edit_startlist">Edit Startlist</string>
    <string name="change_starttime">Change time of start</string>
    <string name="show_only_some_cat">Show only some categories</string>
    <string name="control">Control</string>
    <string name="shift_on_actual_time_automatically">Shift on actual time automatically</string>
    <string name="not_implemented">Not implemented</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="delete_race">Delete Race</string>
    <string name="change_runner">Change Runner</string>
    <string name="change">Change</string>
    <string name="about_app_text">\nO-starter is developing by Vít Koštejn.\n\nIn case of issue, please contact me on v.kostejn.experimental@gmail.com</string>
    <string name="ok">OK</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="new_competition">New Competition</string>
    <string name="invalid_data">Invalid data</string>
    <string name="connection_failed">Server connection failed. \nTry to check internet connection</string>
    <string name="delete_competition">Delete Competition</string>
    <string name="really_delete_competition">Are you sure you want to delete this Competition?</string>
    <string name="no">No</string>
    <string name="add_new_competition">Add new Competition</string>
    <string name="given_name">Given Name:</string>
    <string name="family_name">Family Name:</string>
    <string name="si_number">SI Number:</string>
    <string name="start_number">Start Number:</string>
    <string name="registration_id">Registration Id:</string>
    <string name="load_startlists">Load StartLists</string>
    <string name="the_support_format_is_iof_xml_v_3">(The support format is IOF XML v.3)</string>
    <string name="close_competition">Close Competition</string>
    <string name="change_synchronisation_with_server">This competition is not synchronized with server. You can change it in settings</string>
    <string name="finish_competition">Finish Competition</string>
    <string name="really_finish_competition">Are you really finish this competition? New list of unstarted runners will be created.</string>
    <string name="yes">Yes</string>
    <string name="back_ask">Do you want to finish this competition? The list of unstarted runners will created.</string>
    <string name="old_data">Old Data:</string>
    <string name="new_data">New Data:</string>
    <string name="title_activity_view_changes">ViewChangesActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_unstarted">Unstarted Runners</string>
    <string name="tab_changes">Changes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="the_competition_has_not_finished_yet">The competition has not finished yet</string>
    <string name="finish">Finish</string>
    <string name="unstarted_failed">Contection failed. Please send data about unstarted runners to server later.</string>
    <string name="view_changes_and_unstarted_runners">View Changes And Unstarted Runners</string>
    <string name="send_on_server_summary">The changes in startlist will be sent on Internet and you can show them there.</string>
    <string name="change_event_name">Change Event Name</string>
    <string name="KEY_NAME">KEY_NAME</string>
    <string name="KEY_SEND_ON_SERVER">KEY_SEND_ON_SERVER</string>
    <string name="KEY_CATEGORIES_TO_SHOW">KEY_CATEGORIES_TO_SHOW</string>
    <string name="no_si">No SI</string>
</resources>