<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/web_server">

        <SwitchPreference
            android:key="@string/KEY_SEND_ON_SERVER"
            android:title="@string/send_data_on_server"
            android:summary="@string/send_on_server_summary"/>

    </PreferenceCategory>


    <PreferenceCategory android:title="@string/edit_startlist">

        <EditTextPreference
            android:key="@string/KEY_NAME"
            android:title="@string/change_event_name"/>

        <MultiSelectListPreference
            android:key="@string/KEY_CATEGORIES_TO_SHOW"
            android:title="@string/show_only_some_cat"/>


    </PreferenceCategory>



</PreferenceScreen>