<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/runner_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/SItextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/default_SI"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/runnerNametextView"
        app:layout_constraintStart_toStartOf="@+id/runnerNametextView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/runnerNametextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="2dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/default_name"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/registrationIDtextView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@+id/StartedcheckBox"
        app:layout_constraintTop_toBottomOf="@+id/SItextView" />

    <TextView
        android:id="@+id/startNumbertextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_statNumber"
        app:layout_constraintBottom_toTopOf="@+id/registrationIDtextView"
        app:layout_constraintStart_toStartOf="@+id/registrationIDtextView"

        app:layout_constraintTop_toTopOf="@+id/SItextView"
        app:layout_constraintVertical_chainStyle="spread" />

    <TextView
        android:id="@+id/registrationIDtextView"
        android:layout_width="63dp"
        android:layout_height="17dp"
        android:layout_marginEnd="20dp"
        android:text="@string/dok9800"

        app:layout_constraintBottom_toBottomOf="@+id/runnerNametextView"
        app:layout_constraintEnd_toStartOf="@+id/editImageView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/runnerNametextView"
        app:layout_constraintTop_toBottomOf="@+id/startNumbertextView" />

    <ImageView
        android:id="@+id/editImageView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/ic_edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/StartedcheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:checked="false"
        android:scaleX="2"
        android:scaleY="2"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>