<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp">

    <EditText
        android:id="@+id/givenNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/familyNameEditText"
        app:layout_constraintStart_toStartOf="@+id/familyNameEditText"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/SIEditTextNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/startNumberEditTextNumber"
        app:layout_constraintStart_toStartOf="@+id/startNumberEditTextNumber"
        app:layout_constraintTop_toBottomOf="@+id/familyNameEditText" />

    <EditText
        android:id="@+id/startNumberEditTextNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/regEditText"
        app:layout_constraintStart_toStartOf="@+id/regEditText"
        app:layout_constraintTop_toBottomOf="@+id/SIEditTextNumber" />

    <EditText
        android:id="@+id/familyNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/SIEditTextNumber"
        app:layout_constraintStart_toStartOf="@+id/SIEditTextNumber"
        app:layout_constraintTop_toBottomOf="@+id/givenNameEditText" />

    <TextView
        android:id="@+id/givenTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/given_name"
        app:layout_constraintBottom_toBottomOf="@+id/givenNameEditText"
        app:layout_constraintStart_toStartOf="@+id/familyTextView"
        app:layout_constraintTop_toTopOf="@+id/givenNameEditText" />

    <TextView
        android:id="@+id/familyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/family_name"
        app:layout_constraintBottom_toTopOf="@+id/SIEditTextNumber"
        app:layout_constraintStart_toStartOf="@+id/SITextView"
        app:layout_constraintTop_toBottomOf="@+id/givenNameEditText" />

    <TextView
        android:id="@+id/SITextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/si_number"
        app:layout_constraintBottom_toBottomOf="@+id/SIEditTextNumber"
        app:layout_constraintStart_toStartOf="@+id/startNumTextView"
        app:layout_constraintTop_toTopOf="@+id/SIEditTextNumber" />

    <TextView
        android:id="@+id/startNumTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_number"
        app:layout_constraintBottom_toBottomOf="@+id/startNumberEditTextNumber"
        app:layout_constraintStart_toStartOf="@+id/regTextView"
        app:layout_constraintTop_toBottomOf="@+id/SIEditTextNumber" />

    <TextView
        android:id="@+id/regTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration_id"
        app:layout_constraintBottom_toBottomOf="@+id/regEditText"
        app:layout_constraintEnd_toStartOf="@+id/regEditText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/regEditText" />

    <EditText
        android:id="@+id/regEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/regTextView"
        app:layout_constraintTop_toBottomOf="@+id/startNumberEditTextNumber" />

</androidx.constraintlayout.widget.ConstraintLayout>